package 策略模式;

public interface DiscountStrategy {
    double calcPrice(double originPrice);
}
