package 策略模式;

public interface PaymentStrategy {
    boolean pay(double amount);
}
